--- a/java.html
+++ b/java.html
@@ -9,5 +9,8 @@
     <h1>xin chao</h1>
     <p>xin chao</p>
     <p>chao xin</p>
+    <ul id-"menu"></ul>
+    <a href="https://google.com">go to google</a>
+    <img src="https://media.licdn.com/dms/image/v2/C510BAQEdjKl11NB6-g/company-logo_200_200/company-logo_200_200/0/1631407138886?e=2147483647&v=beta&t=52uYd1J44kmH8epnb1DCDbr6CEXpHTlf_lncDCz5sjA" alt="codegym" style="height:100px">
   </body>
 </html>
